[gd_scene load_steps=3 format=3 uid="uid://chwacgtkrchw5"]

[ext_resource type="Script" uid="uid://b2dygjwdgrf8m" path="res://menus/download_menu.gd" id="1_w7i20"]
[ext_resource type="PackedScene" uid="uid://blqqmlx16vwl6" path="res://menus/full_screen_toggle.tscn" id="2_nsiyo"]

[node name="DownloadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7i20")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game running too slow from the browser?
Download to play from your desktop."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="WindowsLinkButton" type="LinkButton" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Download for Windows"

[node name="LinuxLinkButton" type="LinkButton" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Download for Linux"

[node name="BackButton" type="Button" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "     Back     "

[node name="FullScreenToggle" parent="." instance=ExtResource("2_nsiyo")]

[connection signal="pressed" from="ColorRect/MarginContainer/CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
